trying to fix menu dissappearing behind mobiles navbar

--- a/app/components/footerMenu/footer.module.css
+++ b/app/components/footerMenu/footer.module.css
@@ -4,6 +4,8 @@
   /* position: sticky;
   bottom: 0px; */
   /* border-top: 1px solid black; */
+  position: sticky;
+  bottom: 0px;
 }
 
 .footerMenu {
